# euros.python

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  cnm.json  docker-compose.yaml  fixtures.csv  james.csv  lint.Dockerfile  pyproject.toml  requirements.txt  requirements_extras.txt  requirements_precommit.txt  requirements_test.txt  setup.py  test.Dockerfile
.badges/: generate_badges.sh
.github/workflows/: docker-image.yml
config/: cnm.yaml  synteny.yaml
euros/: __init__.py  all_users.py  config.py  fixtures.py  flags.py  groups.py  knockout.py  load.py  main.py  play.py  standings.py
euros/assets/: custom.css
euros/tests/: __init__.py  test_config.py
euros/tests/resources/: test_config.yaml
euros/tests/resources/example_base_path/: fixtures.csv
euros/tests/resources/example_base_path/example_group/: users.json
euros/tests/resources/example_base_path/example_group/choices/: alex.csv  james.csv  lalitha.csv  roger.csv  sam.csv  shannon.csv
template_python/: main.py
template_python/example_endpoint/: __init__.py  endpoint.py
template_python/tests/: test_empty.py
template_python/tests/example_endpoint/: test_endpoint.py
