[project]
name = "euros"
version = "0.0.1"


[tool.poetry]
description = "Simple Python template to get up and running."
license = "MIT"
authors = [
    "James Day <james.alex.day@outlook.com>"
]
readme = "README.md"
repository = "https://github.com/jday1/template.python"
keywords = ["template"]
packages = [
    { include = "euros" }
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt", "requirements_test.txt"]}
optional-dependencies = {extras = {file = ["requirements_extras.txt"]}}

[tool.setuptools]
py-modules = ["euros"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.coverage.run]
parallel = true
omit = [
    "*/tests/**",
]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 100.00

[tool.black]
include = '\.pyi?$|\.py$|\.ipynb$'
line-length = 140

[tool.pydocstyle]
convention = "google"

[tool.pylint]
recursive = "y"
min-public-methods = 0

[tool.interrogate]
fail-under = 100.0
generate-badge = "./.badges/interrogate.svg"
verbose = 2
omit-covered-files = true
ignore-regex = "test_*"

[tool.docformatter]
in-place = true
recursive = true

[tool.pytest.ini_options]
testpaths=["tests"]
addopts = "--cov=euros --cov-fail-under=100.00"
junitxml = "junit.xml"
